Update lists at 20250220-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -103,6 +103,7 @@ allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
 allow 109.228.160.26;
+allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
 allow 109.70.100.3;
@@ -214,7 +215,6 @@ allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.58.100.98;
 allow 176.58.121.177;
-allow 176.58.89.182;
 allow 176.65.138.250;
 allow 176.65.143.138;
 allow 176.97.114.202;
@@ -300,6 +300,7 @@ allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
 allow 185.170.114.25;
+allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
@@ -852,7 +853,6 @@ allow 212.95.50.77;
 allow 212.95.54.78;
 allow 216.239.90.19;
 allow 216.73.159.101;
-allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
 allow 23.129.64.171;
@@ -872,6 +872,7 @@ allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
+allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -1062,6 +1063,7 @@ allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
@@ -1364,7 +1366,6 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1470,7 +1471,6 @@ allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1484,6 +1484,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.244;
 allow 40.160.3.1;
 allow 45.11.229.132;
@@ -1493,7 +1494,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1573,6 +1573,7 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
+allow 46.195.175.53;
 allow 46.232.251.191;
 allow 46.250.242.141;
 allow 46.30.188.218;
