--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -9,6 +9,7 @@ allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
+allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
@@ -163,6 +164,7 @@ allow 156.229.232.115;
 allow 156.229.232.54;
 allow 156.229.232.98;
 allow 156.229.233.92;
+allow 158.220.123.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 162.210.173.17;
@@ -206,7 +208,6 @@ allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
-allow 172.86.109.84;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.249.57.253;
@@ -215,6 +216,7 @@ allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.58.100.98;
 allow 176.58.121.177;
+allow 176.58.89.182;
 allow 176.65.138.250;
 allow 176.65.143.138;
 allow 176.97.114.202;
@@ -521,7 +523,6 @@ allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.247.226.175;
 allow 185.252.232.218;
-allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -931,7 +932,6 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:f9f3:0:2::319;
-allow 2602:fa59:6:211::1;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
@@ -1078,6 +1078,7 @@ allow 2a02:c206:2240:5051::1;
 allow 2a02:c206:2240:5054::1;
 allow 2a02:c206:2240:5264::1;
 allow 2a02:c206:2240:8448::1;
+allow 2a02:c206:2241:2588::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1126,6 +1127,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1471,6 +1473,7 @@ allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1484,7 +1487,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.244;
 allow 40.160.3.1;
 allow 45.11.229.132;
@@ -1589,6 +1591,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1710,6 +1713,7 @@ allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.231.14;
