--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -547,6 +547,7 @@ deny 185.56.83.83;
 deny 185.67.82.114;
 deny 185.7.33.146;
 deny 185.82.219.109;
+deny 185.84.31.254;
 deny 188.165.200.97;
 deny 188.214.104.21;
 deny 188.239.191.25;
@@ -1106,6 +1107,7 @@ deny 2a03:4000:66:15:18a0:6bff:fe90:3147;
 deny 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 deny 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 deny 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+deny 2a03:6f20:531::254;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
 deny 2a03:e600:100::3;
@@ -1368,6 +1370,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1496,6 +1499,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1658,6 +1662,7 @@ deny 81.17.28.95;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
+deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
@@ -1713,7 +1718,6 @@ deny 92.246.138.145;
 deny 92.246.84.133;
 deny 93.123.12.112;
 deny 93.185.165.211;
-deny 93.95.227.37;
 deny 93.95.228.125;
 deny 93.95.228.205;
 deny 93.95.231.14;
