--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -563,6 +563,7 @@ allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
+allow 192.119.110.151;
 allow 192.210.160.31;
 allow 192.210.214.10;
 allow 192.210.255.47;
@@ -645,7 +646,6 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
-allow 193.36.38.126;
 allow 193.41.226.117;
 allow 193.70.80.213;
 allow 194.15.112.133;
@@ -679,7 +679,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.138;
+allow 198.167.206.177;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -725,6 +725,7 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:b:4ef::;
 allow 2001:470:1:908::9001;
+allow 2001:4b20:12:f001::105;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
@@ -1372,6 +1373,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:7c40:3000:911::2;
 allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1477,7 +1479,6 @@ allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1491,6 +1492,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.244;
 allow 40.160.3.1;
 allow 45.11.229.132;
@@ -1581,6 +1583,7 @@ allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
+allow 46.234.47.105;
 allow 46.250.242.141;
 allow 46.30.188.218;
 allow 46.38.243.210;
