--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -153,7 +153,6 @@ allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
-allow 150.241.67.214;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
@@ -306,12 +305,10 @@ allow 185.170.114.25;
 allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.193.52.180;
 allow 185.195.236.55;
 allow 185.195.71.244;
-allow 185.196.10.184;
 allow 185.207.107.130;
 allow 185.207.107.216;
 allow 185.220.100.240;
@@ -824,6 +821,7 @@ allow 209.141.37.94;
 allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.54.218;
@@ -837,6 +835,7 @@ allow 212.73.134.204;
 allow 212.95.50.77;
 allow 216.239.90.19;
 allow 216.73.159.101;
+allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
 allow 23.129.64.171;
@@ -894,6 +893,7 @@ allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
+allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
@@ -1331,6 +1331,7 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:7c40:3000:911::2;
+allow 2a0d:8140:1fff:3f23::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1616,6 +1617,7 @@ allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 82.153.138.17;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
@@ -1667,6 +1669,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.237.39;
+allow 91.229.239.28;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
