Update lists at 20250221-0300

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -104,7 +104,6 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -324,6 +323,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -504,6 +504,33 @@ allow 2a0b:f4c2::29;
 allow 2a0b:f4c2::3;
 allow 2a0b:f4c2::30;
 allow 2a0b:f4c2::31;
+allow 2a0b:f4c2:3::64;
+allow 2a0b:f4c2:3::65;
+allow 2a0b:f4c2:3::66;
+allow 2a0b:f4c2:3::67;
+allow 2a0b:f4c2:3::68;
+allow 2a0b:f4c2:3::69;
+allow 2a0b:f4c2:3::70;
+allow 2a0b:f4c2:3::71;
+allow 2a0b:f4c2:3::72;
+allow 2a0b:f4c2:3::73;
+allow 2a0b:f4c2:3::74;
+allow 2a0b:f4c2:3::75;
+allow 2a0b:f4c2:3::76;
+allow 2a0b:f4c2:3::77;
+allow 2a0b:f4c2:3::78;
+allow 2a0b:f4c2:3::79;
+allow 2a0b:f4c2:3::80;
+allow 2a0b:f4c2:3::81;
+allow 2a0b:f4c2:3::82;
+allow 2a0b:f4c2:3::83;
+allow 2a0b:f4c2:3::84;
+allow 2a0b:f4c2:3::85;
+allow 2a0b:f4c2:3::86;
+allow 2a0b:f4c2:3::87;
+allow 2a0b:f4c2:3::88;
+allow 2a0b:f4c2:3::89;
+allow 2a0b:f4c2:3::90;
 allow 2a0b:f4c2::4;
 allow 2a0b:f4c2:4::100;
 allow 2a0b:f4c2:4::101;
@@ -543,7 +570,6 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:7c40:3000:911::2;
-allow 2a0d:8140:1fff:3f23::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
