--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -120,7 +120,6 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
@@ -153,6 +152,7 @@ set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
+set_real_ip_from 150.241.67.214;
 set_real_ip_from 152.53.133.14;
 set_real_ip_from 152.53.53.243;
 set_real_ip_from 154.16.116.61;
@@ -219,6 +219,7 @@ set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.138.250;
 set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.153.51.238;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
@@ -458,9 +459,36 @@ set_real_ip_from 185.220.101.60;
 set_real_ip_from 185.220.101.61;
 set_real_ip_from 185.220.101.62;
 set_real_ip_from 185.220.101.63;
+set_real_ip_from 185.220.101.64;
+set_real_ip_from 185.220.101.65;
+set_real_ip_from 185.220.101.66;
+set_real_ip_from 185.220.101.67;
+set_real_ip_from 185.220.101.68;
+set_real_ip_from 185.220.101.69;
 set_real_ip_from 185.220.101.7;
+set_real_ip_from 185.220.101.70;
+set_real_ip_from 185.220.101.71;
+set_real_ip_from 185.220.101.72;
+set_real_ip_from 185.220.101.73;
+set_real_ip_from 185.220.101.74;
+set_real_ip_from 185.220.101.75;
+set_real_ip_from 185.220.101.76;
+set_real_ip_from 185.220.101.77;
+set_real_ip_from 185.220.101.78;
+set_real_ip_from 185.220.101.79;
 set_real_ip_from 185.220.101.8;
+set_real_ip_from 185.220.101.80;
+set_real_ip_from 185.220.101.81;
+set_real_ip_from 185.220.101.82;
+set_real_ip_from 185.220.101.83;
+set_real_ip_from 185.220.101.84;
+set_real_ip_from 185.220.101.85;
+set_real_ip_from 185.220.101.86;
+set_real_ip_from 185.220.101.87;
+set_real_ip_from 185.220.101.88;
+set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.9;
+set_real_ip_from 185.220.101.90;
 set_real_ip_from 185.220.101.96;
 set_real_ip_from 185.220.101.97;
 set_real_ip_from 185.220.101.98;
@@ -786,7 +814,6 @@ set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:3514::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -1112,6 +1139,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:119:3f0b::1;
@@ -1292,6 +1320,33 @@ set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
 set_real_ip_from 2a0b:f4c2::30;
 set_real_ip_from 2a0b:f4c2::31;
+set_real_ip_from 2a0b:f4c2:3::64;
+set_real_ip_from 2a0b:f4c2:3::65;
+set_real_ip_from 2a0b:f4c2:3::66;
+set_real_ip_from 2a0b:f4c2:3::67;
+set_real_ip_from 2a0b:f4c2:3::68;
+set_real_ip_from 2a0b:f4c2:3::69;
+set_real_ip_from 2a0b:f4c2:3::70;
+set_real_ip_from 2a0b:f4c2:3::71;
+set_real_ip_from 2a0b:f4c2:3::72;
+set_real_ip_from 2a0b:f4c2:3::73;
+set_real_ip_from 2a0b:f4c2:3::74;
+set_real_ip_from 2a0b:f4c2:3::75;
+set_real_ip_from 2a0b:f4c2:3::76;
+set_real_ip_from 2a0b:f4c2:3::77;
+set_real_ip_from 2a0b:f4c2:3::78;
+set_real_ip_from 2a0b:f4c2:3::79;
+set_real_ip_from 2a0b:f4c2:3::80;
+set_real_ip_from 2a0b:f4c2:3::81;
+set_real_ip_from 2a0b:f4c2:3::82;
+set_real_ip_from 2a0b:f4c2:3::83;
+set_real_ip_from 2a0b:f4c2:3::84;
+set_real_ip_from 2a0b:f4c2:3::85;
+set_real_ip_from 2a0b:f4c2:3::86;
+set_real_ip_from 2a0b:f4c2:3::87;
+set_real_ip_from 2a0b:f4c2:3::88;
+set_real_ip_from 2a0b:f4c2:3::89;
+set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
 set_real_ip_from 2a0b:f4c2:4::100;
 set_real_ip_from 2a0b:f4c2:4::101;
@@ -1331,7 +1386,6 @@ set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:7c40:3000:911::2;
-set_real_ip_from 2a0d:8140:1fff:3f23::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1554,6 +1608,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.230.174.6;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1617,7 +1672,6 @@ set_real_ip_from 80.94.92.84;
 set_real_ip_from 80.94.92.92;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
-set_real_ip_from 82.153.138.17;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
