--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -134,7 +134,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.147.97.190;
 allow 141.164.38.67;
 allow 141.98.11.62;
 allow 142.171.12.88;
@@ -238,7 +237,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.204.62;
+allow 178.29.131.27;
 allow 179.35.3.170;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -902,7 +901,6 @@ allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1137,7 +1135,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
@@ -1384,6 +1381,7 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:7c40:3000:911::2;
+allow 2a0d:8140:1fff:3f23::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1488,6 +1486,7 @@ allow 2a12:a800:2:1:45:80:158:69;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1501,7 +1500,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.244;
 allow 40.160.3.1;
 allow 45.11.229.132;
@@ -1606,7 +1604,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1670,7 +1667,7 @@ allow 80.94.92.84;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 81.56.50.166;
+allow 82.153.138.17;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
