--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -134,7 +134,6 @@ deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.99.172.11;
 deny 139.99.8.57;
-deny 141.147.97.190;
 deny 141.164.38.67;
 deny 141.98.11.62;
 deny 142.171.12.88;
@@ -238,7 +237,7 @@ deny 178.218.144.51;
 deny 178.218.144.64;
 deny 178.218.144.96;
 deny 178.218.144.99;
-deny 178.30.204.62;
+deny 178.29.131.27;
 deny 179.35.3.170;
 deny 179.43.128.16;
 deny 179.43.159.194;
@@ -902,7 +901,6 @@ deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.154.177.7;
 deny 23.154.177.8;
-deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.254;
 deny 23.184.48.78;
@@ -1137,7 +1135,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
@@ -1384,6 +1381,7 @@ deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:7c40:3000:911::2;
+deny 2a0d:8140:1fff:3f23::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1488,6 +1486,7 @@ deny 2a12:a800:2:1:45:80:158:69;
 deny 2a13:d207:0:461::1;
 deny 31.129.22.65;
 deny 31.133.0.210;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1501,7 +1500,6 @@ deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.242.254.131;
 deny 38.97.116.244;
 deny 40.160.3.1;
 deny 45.11.229.132;
@@ -1606,7 +1604,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.230.174.6;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1670,7 +1667,7 @@ deny 80.94.92.84;
 deny 80.94.92.92;
 deny 81.16.33.42;
 deny 81.17.28.95;
-deny 81.56.50.166;
+deny 82.153.138.17;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
