--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -14,7 +14,6 @@ allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
-allow 104.168.144.253;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -158,6 +157,13 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 156.229.232.101;
+allow 156.229.232.104;
+allow 156.229.232.108;
+allow 156.229.232.115;
+allow 156.229.232.54;
+allow 156.229.232.98;
+allow 156.229.233.92;
 allow 158.220.123.219;
 allow 158.69.252.116;
 allow 159.89.124.116;
@@ -210,6 +216,7 @@ allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.58.100.98;
 allow 176.58.121.177;
+allow 176.65.138.250;
 allow 176.65.143.138;
 allow 176.97.114.202;
 allow 178.162.175.5;
@@ -489,6 +496,7 @@ allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
 allow 185.220.103.9;
+allow 185.224.0.21;
 allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.225.71.14;
@@ -801,6 +809,10 @@ allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
+allow 204.137.14.104;
+allow 204.137.14.105;
+allow 204.137.14.106;
+allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.8.156.142;
 allow 204.85.191.7;
@@ -1117,7 +1129,6 @@ allow 2607:5300:205:300::89b;
 allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
-allow 2607:5501:3000:1dc::2;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
 allow 2620:18c:0:192::171;
@@ -1320,6 +1331,12 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
+allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1350,7 +1367,6 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-allow 2a0b:64c0:11:0:be24:11ff:fe12:2ad2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1737,7 +1753,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
@@ -1871,7 +1886,6 @@ allow 89.147.111.87;
 allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
-allow 89.34.230.180;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
