Update lists at 20250223-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -105,6 +105,7 @@ allow 109.169.33.163;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
+allow 109.228.160.26;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -134,7 +135,6 @@ allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.147.97.190;
 allow 141.164.38.67;
 allow 141.94.156.206;
 allow 141.94.156.54;
@@ -960,6 +960,7 @@ allow 217.199.199.250;
 allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
+allow 23.133.204.6;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
@@ -972,7 +973,6 @@ allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
-allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
@@ -1572,6 +1572,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1677,6 +1678,7 @@ allow 2a13:d207:0:461::1;
 allow 2c0f:6cf::1000;
 allow 31.129.22.65;
 allow 31.133.0.210;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1691,7 +1693,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.75.136.144;
 allow 38.97.116.244;
 allow 40.160.3.1;
@@ -1702,6 +1703,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1758,7 +1760,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
 allow 45.84.107.17;
@@ -1872,6 +1873,7 @@ allow 84.16.224.227;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.183.128;
+allow 85.209.128.250;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.54.28.49;
@@ -1889,7 +1891,6 @@ allow 89.147.108.63;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
-allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.221.215.139;
 allow 89.221.217.206;
