Update lists at 20250226-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -121,6 +121,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 113.20.31.38;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
@@ -238,6 +239,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
+allow 178.29.165.177;
 allow 179.35.3.244;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -717,7 +719,6 @@ allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
-allow 2001:41d0:304:200::3348;
 allow 2001:41d0:304:200::3ea4;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:304:300::5bb5;
@@ -977,7 +978,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
@@ -996,8 +996,6 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.154.177.7;
-allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1333,7 +1331,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1578,6 +1575,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1769,6 +1767,7 @@ allow 45.83.104.137;
 allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
+allow 45.84.107.140;
 allow 45.84.107.17;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1788,7 +1787,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.182.21.248;
-allow 46.195.170.204;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1802,7 +1800,6 @@ allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
 allow 51.222.142.67;
-allow 51.38.225.46;
 allow 51.79.24.181;
 allow 51.79.30.185;
 allow 51.81.222.62;
@@ -1812,7 +1809,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.230.174.6;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1878,6 +1874,7 @@ allow 81.181.104.22;
 allow 8.208.26.177;
 allow 8.209.106.19;
 allow 82.118.248.205;
+allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
