--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -121,6 +121,7 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
+set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
@@ -238,6 +239,7 @@ set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
+set_real_ip_from 178.29.165.177;
 set_real_ip_from 179.35.3.244;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
@@ -717,7 +719,6 @@ set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
 set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
-set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::3ea4;
 set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:304:300::5bb5;
@@ -977,7 +978,6 @@ set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
-set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
 set_real_ip_from 23.154.177.16;
 set_real_ip_from 23.154.177.17;
@@ -996,8 +996,6 @@ set_real_ip_from 23.154.177.29;
 set_real_ip_from 23.154.177.30;
 set_real_ip_from 23.154.177.31;
 set_real_ip_from 23.154.177.7;
-set_real_ip_from 23.154.177.8;
-set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.254;
 set_real_ip_from 23.184.48.78;
@@ -1333,7 +1331,6 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -1578,6 +1575,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:bbc7:0:1004::a2;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1769,6 +1767,7 @@ set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.101;
 set_real_ip_from 45.84.107.128;
+set_real_ip_from 45.84.107.140;
 set_real_ip_from 45.84.107.17;
 set_real_ip_from 45.84.107.172;
 set_real_ip_from 45.84.107.182;
@@ -1788,7 +1787,6 @@ set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
-set_real_ip_from 46.195.170.204;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1802,7 +1800,6 @@ set_real_ip_from 5.104.86.6;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.195.166.174;
 set_real_ip_from 51.222.142.67;
-set_real_ip_from 51.38.225.46;
 set_real_ip_from 51.79.24.181;
 set_real_ip_from 51.79.30.185;
 set_real_ip_from 51.81.222.62;
@@ -1812,7 +1809,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.230.174.6;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1878,6 +1874,7 @@ set_real_ip_from 81.181.104.22;
 set_real_ip_from 8.208.26.177;
 set_real_ip_from 8.209.106.19;
 set_real_ip_from 82.118.248.205;
+set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
