Update lists at 20250226-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -123,7 +123,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.1.253.18;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
@@ -153,7 +152,6 @@ allow 146.103.33.218;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
-allow 148.113.194.31;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
@@ -1134,7 +1132,6 @@ allow 2605:a140:2236:4415::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:120:c74::1;
 allow 2607:5300:201:3100::35c5;
-allow 2607:5300:205:200::240d;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:205:300::89b;
 allow 2607:5300:205:300::c99;
@@ -1578,6 +1575,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1712,6 +1710,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
