--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -123,7 +123,6 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.1.253.18;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 121.78.28.166;
@@ -153,7 +152,6 @@ set_real_ip_from 146.103.33.218;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
-set_real_ip_from 148.113.194.31;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
@@ -1134,7 +1132,6 @@ set_real_ip_from 2605:a140:2236:4415::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:120:c74::1;
 set_real_ip_from 2607:5300:201:3100::35c5;
-set_real_ip_from 2607:5300:205:200::240d;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:205:300::89b;
 set_real_ip_from 2607:5300:205:300::c99;
@@ -1578,6 +1575,7 @@ set_real_ip_from 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1004::a2;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -1712,6 +1710,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.178;
